# cmake-boilerplate

./: CMakeLists.txt  GenerateProject.bat  README.md
MyApp/: CMakeLists.txt
MyApp/Private/src/: main.cpp
MyHeaderLib/: CMakeLists.txt
MyHeaderLib/Public/MyHeaderLib/: MyHeaderLib.h
MyLib/: CMakeLists.txt
MyLib/Private/src/: MyLib.cpp
MyLib/Public/MyLib/: MyLib.h
